# chirpstack

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Cross.toml  DEVELOPERS.md  Dockerfile  Dockerfile-dev-cache  Dockerfile-devel  Dockerfile-nova  Makefile  README.md  Vagrantfile  docker-compose.yml  rust-toolchain.toml  shell.nix  taplo.toml  test.js
api/rust/: Cargo.toml  Makefile  build.rs
api/rust/src/: api.rs  common.rs  gw.rs  integration.rs  internal.rs  lib.rs  meta.rs  stream.rs  streams.rs
backend/: Cargo.toml
backend/src/: lib.rs
chirpstack/: Cargo.toml  Makefile  diesel.toml  diesel_postgres.toml  diesel_sqlite.toml
chirpstack-integration/: Cargo.toml
chirpstack-integration/src/: lib.rs
chirpstack/.rpm/: chirpstack.spec
chirpstack/configuration/: as923.toml  as923_2.toml  as923_3.toml  as923_4.toml  au915_0.toml  au915_1.toml  au915_2.toml  au915_3.toml  au915_4.toml  au915_5.toml  au915_6.toml  au915_7.toml  chirpstack.toml  cn779.toml  eu433.toml  eu868.toml  in865.toml  ism2400.toml  kr920.toml  region_as923.toml  region_as923_2.toml  region_as923_3.toml  region_as923_4.toml  region_au915_0.toml  region_au915_1.toml  region_au915_2.toml  region_au915_3.toml  region_au915_4.toml  region_au915_5.toml  region_au915_6.toml  region_au915_7.toml  region_cn470_0.toml  region_cn470_1.toml  region_cn470_10.toml  region_cn470_11.toml  region_cn470_2.toml  region_cn470_3.toml  region_cn470_4.toml  region_cn470_5.toml  region_cn470_6.toml  (+29 more)
chirpstack/configuration/certs/: ca-config.json  ca-csr.json  mqtt-server.json
chirpstack/debian/: environment.conf  postinst  preinst  service
chirpstack/migrations/00000000000000_initial/: down.sql  up.sql
chirpstack/migrations/2022-04-26-153628_device_profile_payload_codec_script/: down.sql
chirpstack/migrations/2022-04-28-071028_device_profile_flush_queue_on_activate/: up.sql
chirpstack/migrations/2022-05-11-084032_device_profile_templates/: down.sql  up.sql
chirpstack/migrations/2023-01-03-201442_device_profile_region_config_id/: down.sql
chirpstack/migrations/2023-02-16-091535_add_relay_support/: up.sql
chirpstack/migrations/2023-10-19-142614_add_tenant_and_app_tags/: up.sql
chirpstack/migrations/2024-02-07-083424_add_device_session_to_device/: up.sql
chirpstack/migrations/2024-03-26-134652_align_multicast_ping_slot_config/: down.sql  up.sql
chirpstack/migrations/2024-06-13-122655_add_relay_gateway/: up.sql
chirpstack/migrations_postgres/00000000000000_initial/: down.sql  up.sql
chirpstack/migrations_postgres/2022-04-26-153628_device_profile_payload_codec_script/: up.sql
chirpstack/migrations_postgres/2022-04-28-071028_device_profile_flush_queue_on_activate/: down.sql
chirpstack/migrations_postgres/2022-06-14-130020_device_profile_measurements/: down.sql  up.sql
chirpstack/migrations_postgres/2022-11-02-090533_auto_detect_measurements/: down.sql  up.sql
chirpstack/migrations_postgres/2023-01-03-201442_device_profile_region_config_id/: up.sql
chirpstack/migrations_postgres/2023-01-12-130153_rename_ping_slot_period_ping_slot_nb_k/: down.sql
chirpstack/migrations_postgres/2023-02-06-135050_multicast_gateway/: down.sql  up.sql
chirpstack/migrations_postgres/2023-02-13-103316_update_private_gateways/: down.sql  up.sql
chirpstack/migrations_postgres/2023-02-16-091535_add_relay_support/: down.sql
chirpstack/migrations_postgres/2023-09-25-105457_encrypted_queue_items/: up.sql
chirpstack/migrations_postgres/2023-10-19-142614_add_tenant_and_app_tags/: down.sql
chirpstack/migrations_postgres/2023-11-22-120700_device_profile_allow_roaming/: down.sql  up.sql
chirpstack/migrations_postgres/2024-02-07-083424_add_device_session_to_device/: down.sql
chirpstack/migrations_postgres/2024-03-26-134652_align_multicast_ping_slot_config/: up.sql
chirpstack/migrations_postgres/2024-04-30-103242_add_rx1_delay_setting_to_ds/: down.sql  up.sql
chirpstack/migrations_postgres/2024-06-13-122655_add_relay_gateway/: down.sql
chirpstack/migrations_postgres/2024-09-16-123034_add_queue_expires_at/: up.sql
chirpstack/migrations_postgres/2024-11-12-135745_dev_nonces_to_json/: down.sql  up.sql
chirpstack/migrations_postgres/2025-01-13-152218_refactor_device_profile_fields/: down.sql  up.sql
chirpstack/migrations_postgres/2025-01-21-093745_add_fuota_support/: down.sql  up.sql
chirpstack/migrations_postgres/2025-03-17-100300_add_codec_plugin_id/: down.sql  up.sql
chirpstack/migrations_postgres/2025-06-05-100843_align_class_b_ping_slot_naming/: down.sql
chirpstack/migrations_postgres/2025-10-01-085546_device_add_f_cnt_up/: up.sql
chirpstack/migrations_postgres/2025-11-11-140459-0000_refactor_device_profiles/: down.sql  up.sql
chirpstack/migrations_postgres/2025-12-10-105849-0000_device_profile_add_supported_data_rates/: down.sql  up.sql
chirpstack/migrations_postgres/2026-01-28-120000_multicast_ts005/: down.sql  up.sql
chirpstack/migrations_postgres/2026-05-20-105151-0000_add_dev_addr_prefixes_to_tenant/: down.sql  up.sql
chirpstack/migrations_postgres/2026-05-28-000000_ts005_managed_multicast/: down.sql  up.sql
chirpstack/migrations_postgres/2026-06-15-093959-0000_add_gateway_downlink_priority/: up.sql
chirpstack/migrations_postgres/2026-06-15-141114-0000_add_tenant_user_app_and_device_profile_admin/: down.sql  up.sql
chirpstack/migrations_sqlite/00000000000000_initial/: down.sql  up.sql
chirpstack/migrations_sqlite/2022-04-26-153628_device_profile_payload_codec_script/: down.sql  up.sql
chirpstack/rpm/: chirpstack.service  chirpstack.spec  configuration
chirpstack/src/: aeskey.rs  certificate.rs  config.rs  devaddr.rs  eventlog.rs  framelog.rs  gpstime.rs  main.rs  metalog.rs  region.rs  requestlog.rs  sensitivity.rs
chirpstack/src/adr/: default.rs  lr_fhss.rs  (+3 more)
lrwn/: Cargo.toml  Makefile
lrwn-filters/: Cargo.toml  Makefile
lrwn-filters/src/: error.rs  lib.rs
lrwn/src/: aes128.rs  cflist.rs  devaddr.rs  dl_settings.rs  error.rs  eui64.rs  fhdr.rs  helpers.rs  keys.rs  lib.rs  maccommand.rs  mhdr.rs  netid.rs  payload.rs  phy_payload.rs  relay.rs
(+1027 files in other folders)
