[workspace]
  resolver = "2"
  members = [
    "chirpstack",
    "chirpstack-integration",
    "lrwn",
    "lrwn-filters",
    "backend",
    "api/rust",
  ]

[profile.release]
  opt-level = 'z'
  lto = true
  codegen-units = 1

[patch.crates-io]
  # Remove if diesel-async > 0.4.1 with sync connection wrapper
  diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "74867bd68e3b600709911b5854a598cbec2ae4a3" }
