[workspace]
  resolver = "2"
  members = [
    "chirpstack",
    "chirpstack-integration",
    "lrwn",
    "lrwn-filters",
    "backend",
    "api/rust",
  ]

[profile.release]
  opt-level = 'z'
  lto = true
  codegen-units = 1

[patch.crates-io]
  deadpool-redis = { git = "https://github.com/bikeshedder/deadpool.git", rev = "6c361a306059bc8b0d3426515991e253015af6be" }
