[package]
name = "backend"
version = "4.5.1"
authors = ["Orne Brocaar <info@brocaar.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
hex = "0.4"
rand = "0.8"
aes-kw = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.32", features = ["macros" ] }

# Development and testing
[dev-dependencies]
httpmock = "0.6"
