[package]
  name = "backend"
  version = "4.15.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2018"
  publish = false

[dependencies]
  chirpstack_api = { path = "../api/rust", default-features = false, features = [
    "json",
  ] }

  # Encoding
  serde = { workspace = true }
  serde_json = { workspace = true }
  hex = { workspace = true }

  # Error
  thiserror = { workspace = true }
  anyhow = { workspace = true }

  # Logging
  tracing = { workspace = true }

  # Crypto
  getrandom = { workspace = true }
  aes-kw = { workspace = true }

  # HTTP
  reqwest = { workspace = true }
  chrono = { workspace = true }
  tokio = { workspace = true }

# Development and testing
[dev-dependencies]
  httpmock = { workspace = true }
