[package]
  name = "backend"
  publish = false
  version.workspace = true
  authors.workspace = true
  edition.workspace = true

[dependencies]
  chirpstack_api = { path = "../api/rust", default-features = false, features = [
    "json",
  ] }

  # Encoding
  serde.workspace = true
  serde_json.workspace = true
  hex.workspace = true

  # Error
  thiserror.workspace = true
  anyhow.workspace = true

  # Logging
  tracing.workspace = true

  # Crypto
  getrandom.workspace = true
  aes-kw.workspace = true

  # HTTP
  reqwest.workspace = true
  chrono.workspace = true
  tokio.workspace = true

# Development and testing
[dev-dependencies]
  httpmock.workspace = true
