[package]
  name = "chirpstack_integration"
  description = "Library for building external ChirpStack integrations"
  homepage = "https://www.chirpstack.io/"
  license = "MIT"
  version = "4.15.0-test.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  repository = "https://github.com/chirpstack/chirpstack"

[dependencies]
  chirpstack_api = { path = "../api/rust", version = "4.15.0-test.1" }
  redis = { workspace = true, features = ["cluster-async"] }
  anyhow = { workspace = true }
  tracing = { workspace = true }
  tracing-subscriber = { workspace = true }
  async-trait = { workspace = true }
  serde = { workspace = true }
  tokio = { workspace = true, features = ["rt-multi-thread"] }
  serde_json = { workspace = true }
  toml = { workspace = true }
