[package]
  name = "chirpstack_integration"
  description = "Library for building external ChirpStack integrations"
  homepage.workspace = true
  license.workspace = true
  version.workspace = true
  authors.workspace = true
  edition.workspace = true
  repository.workspace = true

[dependencies]
  chirpstack_api = { path = "../api/rust", version = "4.16.0" }
  redis = { workspace = true, features = ["cluster-async"] }
  anyhow.workspace = true
  tracing.workspace = true
  tracing-subscriber.workspace = true
  async-trait.workspace = true
  serde.workspace = true
  tokio = { workspace = true, features = ["rt-multi-thread"] }
  serde_json.workspace = true
  toml.workspace = true
