[package]
  name = "lrwn_filters"
  description = "Library for filtering LoRaWAN payloads on DevAddr and JoinEUIs prefixes"
  homepage = "https://www.chirpstack.io/"
  license = "MIT"
  version = "4.15.0-test.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  repository = "https://github.com/chirpstack/chirpstack"

  [package.metadata.docs.rs]
    all-features = true

[dependencies]
  hex = { workspace = true }
  thiserror = { workspace = true }
  serde = { workspace = true, optional = true }

[dev-dependencies]
  lrwn = { path = "../lrwn" }

[features]
  default = []
  serde = ["dep:serde"]
