[package]
  name = "lrwn"
  description = "Library for encoding / decoding LoRaWAN frames."
  homepage = "https://www.chirpstack.io"
  license = "MIT"
  version = "5.0.2"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2018"
  repository = "https://github.com/chirpstack/chirpstack"

  [package.metadata.docs.rs]
    all-features = true

[dependencies]
  hex = "0.4"
  cmac = { version = "0.7", optional = true }
  aes = { version = "0.8", optional = true }
  serde = { version = "1.0", features = ["derive"], optional = true }
  diesel = { version = "2.2", optional = true }

  # Error handling
  thiserror = "1.0"
  anyhow = "1.0"

  # Misc
  lazy_static = "1.5"

[features]
  default = []
  diesel = ["dep:diesel", "serde"]
  postgres = ["diesel", "diesel/postgres_backend"]
  sqlite = ["diesel", "diesel/sqlite"]
  serde = ["dep:serde"]
  crypto = ["dep:cmac", "dep:aes"]
  regions = []
