[package]
  name = "lrwn"
  description = "Library for encoding / decoding LoRaWAN frames."
  homepage = "https://www.chirpstack.io"
  license = "MIT"
  version = "4.15.0-test.3"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2018"
  repository = "https://github.com/chirpstack/chirpstack"

  [package.metadata.docs.rs]
    all-features = true

[dependencies]
  # Encoding
  hex = { workspace = true }
  serde = { workspace = true, optional = true }

  # Crypto
  cmac = { workspace = true, optional = true }
  aes = { workspace = true, optional = true }

  # Database
  diesel = { workspace = true, optional = true }

  # Error handling
  thiserror = { workspace = true }
  anyhow = { workspace = true }

[features]
  default = []
  diesel = ["dep:diesel", "serde"]
  postgres = ["diesel", "diesel/postgres_backend"]
  sqlite = ["diesel", "diesel/sqlite"]
  serde = ["dep:serde"]
  crypto = ["dep:cmac", "dep:aes"]
  regions = []
  applayer = []
