[package]
  name = "chirpstack_api"
  description = "ChirpStack Protobuf / gRPC API definitions."
  version = "5.0.2"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  license = "MIT"
  homepage = "https://www.chirpstack.io"
  repository = "https://github.com/chirpstack/chirpstack"
  edition = "2021"

[features]
  default = ["api", "json"]
  api = ["tonic/transport", "tonic-build/transport", "tokio"]
  json = ["pbjson", "pbjson-types", "serde"]
  internal = []

[dependencies]
  prost = "0.13"
  prost-types = "0.13"
  hex = "0.4"
  rand = "0.8"

  tonic = { version = "0.12", features = [
    "codegen",
    "prost",
  ], default-features = false, optional = true }
  tokio = { version = "1.40", features = ["macros"], optional = true }
  pbjson = { version = "0.7", optional = true }
  pbjson-types = { version = "0.7", optional = true }
  serde = { version = "1.0", optional = true }

[build-dependencies]
  tonic-build = { version = "0.12", features = [
    "prost",
  ], default-features = false }
  pbjson-build = "0.7"
