[package]
  name = "chirpstack_api"
  description = "ChirpStack Protobuf / gRPC API definitions."
  version = "4.14.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  license = "MIT"
  homepage = "https://www.chirpstack.io"
  repository = "https://github.com/chirpstack/chirpstack"
  edition = "2021"

[features]
  default = ["api", "json"]
  api = [
    "tonic-prost",
    "tonic-prost-build/transport",
    "tonic/transport",
    "tonic-build/transport",
    "tokio",
  ]
  server = ["tonic/router"]
  json = ["pbjson", "pbjson-types", "serde"]
  internal = []

[dependencies]
  prost = "0.14"
  prost-types = "0.14"
  hex = "0.4"
  rand = "0.9"
  tonic = { version = "0.14", features = [
    "codegen",
  ], default-features = false, optional = true }
  tonic-prost = { version = "0.14", optional = true }
  tokio = { version = "1.47", features = ["macros"], optional = true }
  pbjson = { version = "0.8", optional = true }
  pbjson-types = { version = "0.8", optional = true }
  serde = { version = "1.0", optional = true }

[build-dependencies]
  tonic-build = { version = "0.14", default-features = false }
  tonic-prost-build = { version = "0.14", default-features = false }
  pbjson-build = "0.8"
