[package]
  name = "chirpstack_api"
  description = "ChirpStack Protobuf / gRPC API definitions."
  version = "4.15.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  license = "MIT"
  homepage = "https://www.chirpstack.io"
  repository = "https://github.com/chirpstack/chirpstack"
  edition = "2021"

[features]
  default = ["api", "json"]
  api = [
    "tonic-prost",
    "tonic-prost-build/transport",
    "tonic/transport",
    "tonic-build/transport",
    "tokio",
  ]
  server = ["tonic/router"]
  json = ["pbjson", "pbjson-types", "serde"]
  internal = []

[dependencies]
  prost = { workspace = true }
  prost-types = { workspace = true }
  hex = { workspace = true }
  getrandom = { workspace = true }
  tonic = { workspace = true, features = ["codegen"], optional = true }
  tonic-prost = { workspace = true, optional = true }
  tokio = { workspace = true, optional = true }
  pbjson = { workspace = true, optional = true }
  pbjson-types = { workspace = true, optional = true }
  serde = { workspace = true, optional = true }

[build-dependencies]
  tonic-build = { workspace = true }
  tonic-prost-build = { workspace = true }
  pbjson-build = { workspace = true }
